Kubernetes/Create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    name: dev
