Kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
      app: nginx
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 8080
