Kubernetes/serviice.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ngix-service
spec:
  selector:
      app: nginx # This is the label that the service will look for in the deployment
  ports:
    - protocol: TCP
      port: 80 # This is the port that the service will listen on
      targetPort: 8080 # This is the port that the service will forward traffic to in the pods
