Kubernetes/ingress-by_path.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: myapp-ingress
  # Routing rules: States that all traffic coming to myapp.com should be routed to the myapp-internal-service
  # Note
  # - the domain myapp.com must be valid
  # - the domain must be mapped to  Nodes's IP address,which is entry point to the cluster/server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "mongoexpress.com"
    http:
      paths:
      - pathType: Prefix
        path: "/analytics"
        backend:
          service:
            name: "analytics-service"
            port:
             number: 8081
  - host: "mongoexpress.com"
    http:
      paths:
      - pathType: Prefix
        path: "/search"
        backend:
          service:
            name: "search-service"
            port:
             number: 8081
